[project]
name = "django_safe_template_engine"
version = "1.2.0"
dependencies = ["django >= 4.2, < 5"]
requires-python = ">=3.8"
authors = [{ name = "Ronan Boiteau", email = "ronan@boiteau.eu" }]
maintainers = [{ name = "Ronan Boiteau", email = "ronan@boiteau.eu" }]
description = "A Django template engine to render untrusted template code"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["django", "safe", "template", "engine"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Documentation = "https://github.com/ronanboiteau/django_safe_template_engine/blob/main/README.md"
Repository = "https://github.com/ronanboiteau/django_safe_template_engine.git"
Issues = "https://github.com/ronanboiteau/django_safe_template_engine/issues"
Changelog = "https://github.com/ronanboiteau/django_safe_template_engine/blob/main/CHANGELOG.md"
