[project]
name = "django_safe_template_engine"
version = "1.5.0"
dependencies = ["django >= 3.0, < 6.1"]
requires-python = ">=3.8"
authors = [{ name = "Ronan Boiteau", email = "ronan@boiteau.eu" }]
maintainers = [{ name = "Ronan Boiteau", email = "ronan@boiteau.eu" }]
description = "A Django template engine to render untrusted template code"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["django", "safe", "template", "engine"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Framework :: Django",
  "Framework :: Django :: 3.0",
  "Framework :: Django :: 3.1",
  "Framework :: Django :: 3.2",
  "Framework :: Django :: 4.0",
  "Framework :: Django :: 4.1",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Framework :: Django :: 5.1",
  "Framework :: Django :: 5.2",
  "Framework :: Django :: 6.0",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Documentation = "https://github.com/ronanboiteau/django_safe_template_engine/blob/main/README.md"
Repository = "https://github.com/ronanboiteau/django_safe_template_engine.git"
Issues = "https://github.com/ronanboiteau/django_safe_template_engine/issues"
Changelog = "https://github.com/ronanboiteau/django_safe_template_engine/blob/main/CHANGELOG.md"
